--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "inuit-spacing": "^0.7.0",
     "inuit-tools-widths": "^0.1.4",
     "inuit-widths": "^0.4.2",
+    "photoswipe": "^4.1.0",
     "ractive": "^0.7.3"
   }
 }
